SLING-12214 - Use constants for topic names (#150)
* SLING-12214 - Use constants for topic names

* SLING-12214 - Remove unused imports